--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dr. Susovan Jana</title>
   <link rel="shortcut icon"  href="./images/icons/title.png" type="image/x-icon"/>
-  <link rel="stylesheet" href="mystyles.css">
+  <link rel="stylesheet" href="/mystyles.css">
 </head>
 <body>
 
