--- a/gallery.html
+++ b/gallery.html
@@ -59,9 +59,9 @@
     <div class="gallery-grid">
       <img src="images\photographs\Workshop_AI_IOT_2024\P1.jpg" alt="Photographs">
       <img src="images\photographs\Workshop_AI_IOT_2024\P2.jpg" alt="Photographs">
-      /*<img src="images\photographs\Workshop_AI_IOT_2024\P3.jpg" alt="Photographs">
+      <!--	  <img src="images\photographs\Workshop_AI_IOT_2024\P3.jpg" alt="Photographs">
 	  <img src="images\photographs\Workshop_AI_IOT_2024\P4.jpg" alt="Photographs">
-	  <img src="images\photographs\Workshop_AI_IOT_2024\P5.jpg" alt="Photographs">*/
+	  <img src="images\photographs\Workshop_AI_IOT_2024\P5.jpg" alt="Photographs">-->
       <!-- Add more photos here -->
     </div>
 	<br>
