--- a/gallery.html
+++ b/gallery.html
@@ -57,11 +57,11 @@
 	<br>
 	<h3><i>Delivered a lecture on “Concepts and Components of IoT” in One Day Hands-on Workshop on AI & IoT at Rotary Club of Calcutta, Dec 13, 2024.</i></h3>
     <div class="gallery-grid">
-      <img src="images\photographs\Workshop_AI_IOT_2024\P1.jpg" alt="Photographs">
-      <img src="images\photographs\Workshop_AI_IOT_2024\P2.jpg" alt="Photographs">
-      <img src="images\photographs\Workshop_AI_IOT_2024\P3.jpg" alt="Photographs">
-	  <img src="images\photographs\Workshop_AI_IOT_2024\P4.jpg" alt="Photographs">
-	  <img src="images\photographs\Workshop_AI_IOT_2024\P5.jpg" alt="Photographs">
+      <img src="images\photographs\Workshop_AI_IOT_2024\P1.JPG" alt="Photographs">
+      <img src="images\photographs\Workshop_AI_IOT_2024\P2.JPG" alt="Photographs">
+      <img src="images\photographs\Workshop_AI_IOT_2024\P3.JPG" alt="Photographs">
+      <img src="images\photographs\Workshop_AI_IOT_2024\P4.JPG" alt="Photographs">
+      <img src="images\photographs\Workshop_AI_IOT_2024\P5.JPG" alt="Photographs">
       <!-- Add more photos here -->
     </div>
 	<br>
