--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
       <!-- Add more photos here -->
     </div>
 	<br>
-	<h3><i>Delivered Lecture on Digital Technology & Multimedia Tools at National Council of Science Museums (NCSM), Ministry of Culture, Govt. of India., August, 2024.</i></h3>
+	<h3><i>Delivered Lecture on "Digital Technology & Multimedia Tools" at National Council of Science Museums (NCSM), Ministry of Culture, Govt. of India., August, 2024.</i></h3>
     <div class="gallery-grid">
       <img src="images\photographs\NCSM_2024\NCSM_2024.jpg" alt="Photographs">
       <!-- Add more photos here -->
