--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
       <!-- Add more photos here -->
     </div>
 	<br>
-	<h3><i>Delivered Lecture on "Digital Technology & Multimedia Tools" at National Council of Science Museums (NCSM), Ministry of Culture, Govt. of India., August, 2024.</i></h3>
+	<h3><i>Delivered Lecture on Digital Technology & Multimedia Tools at National Council of Science Museums (NCSM), Ministry of Culture, Govt. of India., August, 2024.</i></h3>
     <div class="gallery-grid">
       <img src="images\photographs\NCSM_2024\NCSM_2024.jpg" alt="Photographs">
       <!-- Add more photos here -->
@@ -87,6 +87,17 @@
       <!-- Add more photos here -->
     </div>
 	
+	<br>
+	<h3><i>Delivered lecture and conducted hands on session in 3 Day Workshop on “Emerging Trends in Image Processing using MATLAB” organized by School of Education Technology, Jadavpur University held in December 19-21, 2022.</i></h3>
+    <div class="gallery-grid">
+	<img src="images\photographs\Workshop_IP_MATLAB_2022\P1.jpg" alt="Photographs">
+    <img src="images\photographs\Workshop_IP_MATLAB_2022\P2.jpg" alt="Photographs">
+	<img src="images\photographs\Workshop_IP_MATLAB_2022\P3.jpg" alt="Photographs">
+	<img src="images\photographs\Workshop_IP_MATLAB_2022\P4.jpg" alt="Photographs">
+	<img src="images\photographs\Workshop_IP_MATLAB_2022\P5.jpg" alt="Photographs">
+      <!-- Add more photos here -->
+    </div>
+	
   </section>
 
   <section id="certificates">
@@ -96,7 +107,13 @@
 
   <section id="videos">
     <h2>Videos</h2>
-	<h3>Coming Soon!</h3>
+	<div class="video-grid">
+    <div class="video-item">
+      <h3><i>Day 1 of 3 Day Workshop on “Emerging Trends in Image Processing using MATLAB” organized by School of Education Technology, Jadavpur University held in December 19-21, 2022.</i></h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/eZGCpcYhwkg" 
+        title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+    </div>
+	</div>
   </section>
 
   <footer>
