--- a/gallery.html
+++ b/gallery.html
@@ -102,7 +102,18 @@
 
   <section id="certificates">
     <h2>Certificates</h2>
-	<h3>Coming Soon!</h3>
+	<h3><i>Recognition as Keynote Speaker in 17th International Conference on Industrial Engineering and Management (ICIEM 2025- Online), April 29, 2025</i></h3>
+    <div class="certificate-container">
+      <img src="certificates\ICIEM_2025.png" alt="Certificates">
+      <!-- Add more photos here -->
+    </div>
+	<br>
+	<h3><i>Wipro Certified Faculty on Java Full Stack</i></h3>
+    <div class="certificate-container">
+      <img src="certificates\WCF_Java_2024.jpg" alt="Certificates">
+      <!-- Add more photos here -->
+    </div>
+	<br>
   </section>
 
   <section id="videos">
