--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
     <ul id="nav-links">
       <li><a href="#home">Home</a></li>
-	  <li><a href="documents/resume/SJ_RESUME.pdf" target="_blank" title="resume">Resume</a></li>
       <li><a href="#experience">Experience</a></li>
+	  <li><a href="#research">Research</a></li>
       <li><a href="#publications">Publications</a></li>
 	  <li><a href="#talk">Talk</a></li>
       <li><a href="#courses">Courses</a></li>
@@ -39,7 +39,7 @@
     <div class="profile-container">
     <img src="images/profile_pic.jpg" alt="Dr. Susovan Jana" class="profile-img">
     <div class="designation">
-      <p><strong>Dr. Susovan Jana </strong></br>Associate Professor & Programme In-Charge</br>Department of Computer Science & Engineering (IoT) </br>Institute of Engineering & Management, Kolkata</p>
+      <p><strong>Dr. Susovan Jana </strong> <a href="documents/resume/SJ_RESUME.pdf" target="_blank" title="resume">[Resume]</a></br>Associate Professor & Programme In-Charge</br>Department of Computer Science & Engineering (IoT) </br>Institute of Engineering & Management, Kolkata</p>
 	  <div class="social-links">
 		<a href="https://www.linkedin.com/in/dr-susovan-jana-87381027/" target="_blank" title="LinkedIn">
 			<img src="images/icons/linkedin.png" alt="LinkedIn">
@@ -106,7 +106,14 @@
     </tbody>
   </table>
   </section>
-
+   
+   <section id="research">
+    <h2>Research</h2>
+	<h3>Ph.D. Scholars</h3>
+	 Mr. Subhra Prakash Dutta [Registered under University of Engineering & Management, Kolkata]
+	 Mrs. Jayanti Mahata [Enrolled under University of Engineering & Management, Kolkata]
+    </section>
+	  
   <section id="publications">
     <h2>Publications</h2>
 	<h3>Articles in Journals</h3>
@@ -137,7 +144,7 @@
 
 	<h3>Articles in Conferences Proceedings</h3>
     <ol class="bracketed-list">  
-	<li>S. P. Dutta, <b>S. Jana</b>, and P. K. Sinha, “IoT-Based Water Quality Monitoring with Floating Smart Device: A Paradigm Shift in Water Standard Surveillance,” <i>2024 2nd International Conference on Signal Processing, Communication, Power and Embedded System (SCOPES)</i>, Dec, 2024. [Accepted & Presented]</li>
+	<li>S. P. Dutta, <b>S. Jana</b>, and P. K. Sinha, “IoT-Based Water Quality Monitoring with Floating Smart Device: A Paradigm Shift in Water Standard Surveillance,” <i>2024 2nd International Conference on Signal Processing, Communication, Power and Embedded System (SCOPES)</i>, pp. 1-6, Dec, 2024.<a href="https://doi.org/10.1109/SCOPES64467.2024.10991016" target="_blank">[Link]</a></li>
 
 	<li>S. Datta, S. Banerjee, and <b>S. Jana</b>, “Disease Classification of Star Fruit (Averrhoa carambola L.) using Deep Learning,” <i>2nd International Conference on Recent Advances in Artificial Intelligence & Smart Applications (RAAISA) 2024</i>, Dec 14-15, 2024. [Accepted & Presented]</li>
 
@@ -157,7 +164,7 @@
 
 	<li>S. Banerjee, S. Datta, D. Ghosh, and <b>S. Jana</b>, “A Secure Text Steganography using Randomized Mathematical Functions and LSB,” <i>7th International Conference on Electronics, Materials Engineering & Nano-Technology (IEMENTech) - IEMENTech2023</i>, IEEE, Dec, 2023. <a href="https://doi.org/10.1109/IEMENTech60402.2023.10423560" target="_blank">[Link]</a></li>
 
-	<li>S. Chakraborty and <b>S. Jana</b>, "Early Prediction of Cataract using Convolutional Neural Network," <i>2023 IEEE Devices for Integrated Circuit (DevIC)</i>, Kalyani, India, 2023, pp. 446-450. <a href="https://doi.org/10.1109/DevIC57758.2023.10135056" target="_blank">[Link]</a></li>
+	<li>S. Chakraborty and <b>S. Jana</b>, "Early Prediction of Cataract using Convolutional Neural Network," <i>2023 IEEE Devices for Integrated Circuit (DevIC)</i>, pp. 446-450, 2023. <a href="https://doi.org/10.1109/DevIC57758.2023.10135056" target="_blank">[Link]</a></li>
 
 	<li>A. Paria, and <b>S. Jana</b>, “Prediction of Crops Production Using Random Forest Regression,” <i>International Conference on Computational Intelligence, Data Science and Cloud Computing</i>, pp. 97-106, Springer, Dec. 2021. <a href="https://doi.org/10.1007/978-981-19-1657-1_8" target="_blank">[Link]</a></li>
 
@@ -219,7 +226,7 @@
     <h2>Courses</h2>
 	<h3>2025-2026 : Odd Semester</h3>
 	<ul class="custom-ul">
-      <li>IT Workshop (MATLAB)</li>
+      <li>IT Workshop (MATLAB) <a href="itworkshop-matlab.html" target="_blank">[Link]</a></li>
       <li>Software Engineering</li>
       <li>IT Workshop (MATLAB) Lab</li>
     </ul>
@@ -293,25 +300,43 @@
 
   <section id="updates">
     <h2>Updates</h2>
-    <p>📢 Keynote on “Future of Industry 4.0: Converging AI, Machine Learning, and IoT” in 17th International Conference on Industrial Engineering and Management (ICIEM 2025), April 29, 2025</p>
-    <p>📌 New Publication accepted in IEEE Conference</p>
+    <p>📌 New Publication in IEEE Conference<a href="https://doi.org/10.1109/SCOPES64467.2024.10991016"target="_blank">[Link]</a></p>
+	<p>📢 Keynote on “Future of Industry 4.0: Converging AI, Machine Learning, and IoT” in 17th International Conference on Industrial Engineering and Management (ICIEM 2025), April 29, 2025</p>
   </section>
 
   <section id="outreach">
     <h2>Outreach</h2>
-      <p>Coming Soon!</p>
+    <ul class="custom-ul">
+	<li>Invited as Head Examiner at UEM Jaipur during End Semester Examination- December 2024 and May 2025</li>
+	<li>Invited as Question Paper Setter and Answer Script Evaluator for "Multimedia Project Development", A subject of full time M.Tech Course in Science & Communication at National Council of Science Museums (NCSM), Govt. of India, 2025.</li>
+	<li>Invited as Question Paper Setter and Answer Script Evaluator for "Digital Technology & Multimedia Tools", A subject of full time M.Tech Course in Science & Communication at National Council of Science Museums (NCSM), Govt. of India, 2024.</li>
+	<li>Invited as an external moderator for even semester examination, 2023-2024 at Brainware University.</li>
+	<li>Invited as an external examiner for thesis evaluation of M.Tech I.T. (Courseware Engineering) at School of Education Technology, Jadavpur University on 28th June 2023.</li>
+	<li>Invited as Question Paper Setter and Answer Script Evaluator for "Advanced Graphics and Animation" a subject of M.Tech in Multimedia Technology at Jadavpur University in 2023, 2024, and 2025.</li>
+	<li>Invited as Question Paper Setter and Answer Script Evaluator for "Human Computer Interaction" a subject of M.Tech in IT(Courseware Engineering) and M.Tech in Multimedia Technology at Jadavpur University in 2022, 2023 and 2024.</li>
+	<li>Invited as Question Paper Setter and Answer Script Evaluator for "Management of Software Syatem Development" a subject of M.Tech in IT(Courseware Engineering) and M.Tech in Multimedia Technology at Jadavpur University in 2022.</li>
+	<li>Invited as Question Paper Setter and Answer Script Evaluator for "Computer Network & Web Technology" a subject of M.Tech in IT(Courseware Engineering) and M.Tech in Multimedia Technology at Jadavpur University in 2021.</li>
+	<li>Invited as Guest Faculty at National Institute of Electronics & Information Technology, Kolkata in 2016 to 2017.</li>
+	</ul>
   </section>
 
   <section id="awards">
     <h2>Awards</h2>
-    <ul>
+    <ul class="custom-ul">
       <li><b><i>“The Best of IBM Honour”</i></b> from IBM India Pvt. Ltd. in 2015.</li>
+	  <li><b><i>“Deep Skill Adder”</i></b> for contribution towards the Policy Center Project from IBM India Pvt. Ltd. in 2015.</li>
+	  <li><b><i>“Manager’s Choice Award”</i></b> for demonstrating the practice: Show Personal Interest from IBM India Pvt. Ltd. in 2015.</li>
+	  <li><b><i>“Manager’s Choice Award”</i></b> for demonstrating the practice: Put the Client First from IBM India Pvt. Ltd. in 2015.</li>
     </ul>
   </section>
 
   <section id="achievements">
     <h2>Achievements</h2>
-    <p>Coming Soon!</p>
+	<ul class="custom-ul">
+	<li>Ranked 2nd in M.Tech IT (CWE) Department at Jadavpur Uiversity in 2014.</li>
+	<li>Ranked 2nd in B.Tech from Information Technology Department at GCETTS in 2012.</li>
+	<li>Qualified GATE (Computer Science) in 2012.</li>
+	</ul>
   </section>
 
   <section id="contact">
