--- a/index.html
+++ b/index.html
@@ -109,9 +109,18 @@
    
    <section id="research">
     <h2>Research</h2>
+	<h3>Research Interests</h3>
+	<ul class="custom-ul">
+	 <li>Image Processing</li>
+	 <li>Computer Vision</li>
+	 <li>Machine Learning</li>
+	 <li>Internet of Things</li>
+	 </ul>
 	<h3>Ph.D. Scholars</h3>
-	 Mr. Subhra Prakash Dutta [Registered under University of Engineering & Management, Kolkata]
-	 Mrs. Jayanti Mahata [Enrolled under University of Engineering & Management, Kolkata]
+	<ol class="bracketed-list">  
+	 <li>Mr. Subhra Prakash Dutta [Registered under University of Engineering & Management, Kolkata]</li>
+	 <li>Mrs. Jayanti Mahata [Enrolled under University of Engineering & Management, Kolkata]</li>
+	 </ol>
     </section>
 	  
   <section id="publications">
