--- a/itworkshop-matlab.html
+++ b/itworkshop-matlab.html
@@ -44,6 +44,10 @@
       <td><strong>Prerequisite</strong></td>
       <td>Basic Mathematical Knowledge</td>
     </tr>
+	 <tr>
+      <td><strong>Lab Venue</strong></td>
+      <td>IT Lab 4, 2nd Floor, IEM (Gurukul)</td>
+    </tr>
     <tr>
       <td><strong>Summary</strong></td>
       <td>The syllabus covers fundamental to advanced MATLAB skills, starting with an introduction to MATLAB environment, basic operations, and data types. It includes vector/matrix operations, scripting, functions, debugging, conditional programming, data handling, and visualization in 2D and 3D. The course concludes with GUI development using App Designer, exploring interface components, event-driven programming, and app deployment.</td>
@@ -55,14 +59,14 @@
   <section id="announcement">
     <h2>Announcement</h2>
     <ul class="custom-ul">
-      <li>📢 First class will be held on <b>July TBD,2025 at 10:00 AM</b> in LG TBD.</li>
-      <li>📝 Lab Assignments 1–5 must be submitted by <b>July TBD, 2025</b>.</li>
-	  <li>📄 Detailed <b><a href="documents/itworkshop/lesson_plan_theory.pdf" target="_blank">Lesson Plan for Theory</a></b> is now available.</li>
+      <li>📢 First class will be held on <b>July 7, 2025 at 10:00 AM</b> in LG TBD.</li>
+      <li>📝 Lab Assignments must be submitted <b>SAME DAY</b> as the date of assignment.</li>
+	  <li>📄 Detailed <b><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EUHSe7eBiINAli0oSQakvUsBnPpTeDOaSLxy1Z0Xsxn_wg?e=3iXDGa" target="_blank">Lesson Plan for Theory</a></b> is now available.</li>
     </ul>
   </section>
 
   <section id="syllabus">
-    <h2>Syllabus</h2>
+    <h2>Syllabus <a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/Ef3Ubyem49lLigKtgVdV3kUBFYKYkA7p1lByMe6wIRvPxA?e=OIj1Sl" target="_blank">[Link]</a></h2>
     <ul class="custom-ul">
      <li><b>Introduction to MATLAB:</b> Introduction, Why MATLAB? History, it’s strengths, Competitors, Starting MATLAB, Using MATLAB as a calculator, Quitting MATLAB Basics commands in MATLAB, Basic Operations, MATLAB-Data types, Rules about variable names, Predefined variables etc.</li>
      <li><b>Vector, Matrix, Array, Cell and String Operations:</b> Vector, Matrix, Array Addressing, Built-in functions, Mathematical Operations, Dealing with strings (Array of characters), Array of array (cell) concept.</li>
@@ -77,25 +81,28 @@
   <section id="instructors">
     <h2>Instructors</h2>
     <ul class="custom-ul">
-      <li><strong><a href="index.html">Dr. Susovan Jana</a></strong> — Associate Professor, CSE (IoT), IEM, Kolkata</li>
-	  <li><strong>Dr. Avipsita Chatterjee</strong> — Assistant Professor, CSE (IoT), IEM, Kolkata</li>
-	  <li><strong>Dr. Koushik Dutta</strong> — Associate Professor, CSE (IoT), IEM, Kolkata</li>
+      <li><strong><a href="index.html">Dr. Susovan Jana</a></strong></li>
+	  <li><strong>Dr. Avipsita Chatterjee</strong></li>
+	  <li><strong>Dr. Koushik Dutta</strong></li>
     </ul>
   </section>
 
   <section id="materials">
     <h2>Study Materials</h2>
-    <ul class="custom-ul">
-      <li><a href="documents/itworkshop/matlab_basics.pdf" target="_blank">MATLAB Basics PDF</a></li>
-    </ul>
+	<ul class="custom-ul">
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EeGaJT9fAK9OiKF--XgX7_EBC4wyayRTVcVzPk7JYE7PJQ?e=EaNQbf" target="_blank">Introduction to MATLAB</a></li>
+	</ul>
   </section>
 
   <section id="assignments">
     <h2>Lab Assignments</h2>
     <ul class="custom-ul">
-	<li><a href="documents/itworkshop/lab_assignments.pdf" target="_blank">List of Assignments</a></li>
-    <li><a href="documents/itworkshop/lab_assignment1.pdf" target="_blank">Assignment 1: Introduction to MATLAB Interface</a></li>
-    </ul>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/ERE-kDj7mY5ArlzHxp0hXgoBnswwGvAO0AFLL1HfTJF9fg?e=ey2vrY" target="_blank">List of Assignments</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:w:/g/personal/susovan_jana_iem_edu_in/Ea3XpMs34DxHjOoLoYwEjSABdXd2XpbKY73SItmyM-NCMg?e=nx0BGI" target="_blank">Cover Page Format [IT] for Preparing Lab Copy</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:w:/g/personal/susovan_jana_iem_edu_in/EbbkC17zXe1DiO2MUmdH_XQB34NICk_5eSa3bQO5PP5JYw?e=HhUSYD" target="_blank">Cover Page Format [CSE (IoT)] for Preparing Lab Copy</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:w:/g/personal/susovan_jana_iem_edu_in/ERnsdyue-ntPpMA5bYRKROIB19HsQroNkuWfrlGro7n_Ow?e=WdhZIq" target="_blank">Cover Page Format [CSE (IoTCSBT)] for Preparing Lab Copy</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EdqMwARxwjhMpS3ufVhPN0cB7mHzYv3m_wDxu9MGEih5bw?e=1JSpjQ" target="_blank">Index Page Format for Preparing Lab Copy</a></li>
+	 </ul>
   </section>
 
   <section id="books">
