--- a/index.html
+++ b/index.html
@@ -117,10 +117,18 @@
 	 <li>Internet of Things</li>
 	 </ul>
 	<h3>Ph.D. Scholars</h3>
-	<ol class="bracketed-list">  
-	 <li>Mr. Subhra Prakash Dutta [Registered under University of Engineering & Management, Kolkata]</li>
-	 <li>Mrs. Jayanti Mahata [Enrolled under University of Engineering & Management, Kolkata]</li>
-	 </ol>
+	<table style="width:100%; border-collapse: collapse;" border="0" cellpadding="15">
+	<tr>
+	<td>
+      <div class="profile-container"><img src="images/spdutta.jpeg" alt="Dr. Susovan Jana" class="profile-img">
+      <div class="designation"><strong>Mr. Subhra Prakash Dutta </strong><br>[Registered under University of Engineering & Management, Kolkata]<br><b>Research Domain:</b> Internet of Things, Machine Learning</p>
+	</td>
+	<td>
+	  <div class="profile-container"><img src="images/jmahata.png" alt="Dr. Susovan Jana" class="profile-img">
+     <div class="designation"><strong>Mrs. Jayanti Mahata </strong><br>[Enrolled under University of Engineering & Management, Kolkata]<br><b>Research Domain:</b> Natural Language Processing, Machine Learning
+   <td>
+   <tr>
+   </table>
     </section>
 	  
   <section id="publications">
