--- a/index.html
+++ b/index.html
@@ -119,15 +119,13 @@
 	<h3>Ph.D. Scholars</h3>
 	<table style="width:100%; border-collapse: collapse;" border="0" cellpadding="15">
 	<tr>
-	<td>
       <div class="profile-container"><img src="images/spdutta.jpeg" alt="Dr. Susovan Jana" class="profile-img">
       <div class="designation"><strong>Mr. Subhra Prakash Dutta </strong><br>[Registered under University of Engineering & Management, Kolkata]<br><b>Research Domain:</b> Internet of Things, Machine Learning</p>
-	</td>
-	<td>
+	</tr>
+	<tr>
 	  <div class="profile-container"><img src="images/jmahata.png" alt="Dr. Susovan Jana" class="profile-img">
      <div class="designation"><strong>Mrs. Jayanti Mahata </strong><br>[Enrolled under University of Engineering & Management, Kolkata]<br><b>Research Domain:</b> Natural Language Processing, Machine Learning
-   <td>
-   <tr>
+   </tr>
    </table>
     </section>
 	  
@@ -161,6 +159,10 @@
 
 	<h3>Articles in Conferences Proceedings</h3>
     <ol class="bracketed-list">  
+	<li>D. Chatterjee, <b>S. Jana</b>, “Resume Analyzer: An AI-Powered Approach to Job Matching and ATS Optimization,” <i>Artificial Intelligence and Sustainable Computing (AISC 2025)</i>, July 24-July26, 2025. [Accepted]</li>
+
+	<li>S. Datta, S. Banerjee, and <b>S. Jana</b>, “Disease Classification of Star Fruit (Averrhoa carambola L.) using Deep Learning,” <i>International Conference on Computing, Intelligence, and Application (CIACON)</i>, IEEE, 2025. [Accepted]</li>
+	
 	<li>S. P. Dutta, <b>S. Jana</b>, and P. K. Sinha, “IoT-Based Water Quality Monitoring with Floating Smart Device: A Paradigm Shift in Water Standard Surveillance,” <i>2024 2nd International Conference on Signal Processing, Communication, Power and Embedded System (SCOPES)</i>, pp. 1-6, Dec, 2024.<a href="https://doi.org/10.1109/SCOPES64467.2024.10991016" target="_blank">[Link]</a></li>
 
 	<li>S. Datta, S. Banerjee, and <b>S. Jana</b>, “Disease Classification of Star Fruit (Averrhoa carambola L.) using Deep Learning,” <i>2nd International Conference on Recent Advances in Artificial Intelligence & Smart Applications (RAAISA) 2024</i>, Dec 14-15, 2024. [Accepted & Presented]</li>
