--- a/itworkshop-matlab.html
+++ b/itworkshop-matlab.html
@@ -94,9 +94,9 @@
 	<ul class="custom-ul">
 	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EeGaJT9fAK9OiKF--XgX7_EBC4wyayRTVcVzPk7JYE7PJQ?e=EaNQbf" target="_blank">1. Introduction to MATLAB</a></li>
 	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EakkH_FWHtdEkULDKFnh7x0B1Juiv41pJ-y7pGbVejsFqA?e=lUiiwj" target="_blank">2. Data Types, Variables, Operators & Basic Commands</a></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EQ0_jCkvEwJCi41CfjBPnxIBxQi8Aoc-QiL8M34WNlxQ-w?e=XHnJli" target="_blank">3. MATLAB_Vector, Matrix, Array, and Cell</a></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EVKr_ggtwMJIs9XnDtiTYX8BDcSCSybCHfNJZVbANHdbaA?e=ro02zJ" target="_blank">4_MATLAB_Script, Function & Debugging</a></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EXU7Q-GymK1IoJNR6khgQTIBDk3jMkiMp2rM27jYYU4EgQ?e=heGMyX" target="_blank">5_MATLAB_Programming Constructs</a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EQ0_jCkvEwJCi41CfjBPnxIBxQi8Aoc-QiL8M34WNlxQ-w?e=XHnJli" target="_blank">3. MATLAB_Vector, Matrix, Array, and Cell</a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EVKr_ggtwMJIs9XnDtiTYX8BDcSCSybCHfNJZVbANHdbaA?e=ro02zJ" target="_blank">4_MATLAB_Script, Function & Debugging</a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EXU7Q-GymK1IoJNR6khgQTIBDk3jMkiMp2rM27jYYU4EgQ?e=heGMyX" target="_blank">5_MATLAB_Programming Constructs</a><span class="blinking-new">🔴New</span></li>
 	</ul>
   </section>
 
@@ -104,8 +104,8 @@
     <h2>Lab Assignments</h2>
     <ul class="custom-ul">
 	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/ERE-kDj7mY5ArlzHxp0hXgoBnswwGvAO0AFLL1HfTJF9fg?e=ey2vrY" target="_blank">List of Assignments</a></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:x:/g/personal/susovan_jana_iem_edu_in/ETGwf2jU-HVJgYtQIOvxwR0BYGz4SvPuNE5vUg0FqYIGnw?e=UVzcvb" target="_blank">Lab Assignment Evaluation Tracker </a><span class="blinking-new">🔴New</span></li>
-	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EX9kvMg52y5PmWkhPKpdsRcBqZbntgJfxXd4T56yl0zWVg?e=6uTE51" target="_blank">General Notice for LAB </a><span class="blinking-new">🔴New</span></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:x:/g/personal/susovan_jana_iem_edu_in/ETGwf2jU-HVJgYtQIOvxwR0BYGz4SvPuNE5vUg0FqYIGnw?e=UVzcvb" target="_blank">Lab Assignment Evaluation Tracker </a></li>
+	<li><a href="https://iemcollege-my.sharepoint.com/:b:/g/personal/susovan_jana_iem_edu_in/EX9kvMg52y5PmWkhPKpdsRcBqZbntgJfxXd4T56yl0zWVg?e=6uTE51" target="_blank">General Notice for LAB </a></li>
 	<li><a href="https://iemcollege-my.sharepoint.com/:w:/g/personal/susovan_jana_iem_edu_in/Ea3XpMs34DxHjOoLoYwEjSABdXd2XpbKY73SItmyM-NCMg?e=nx0BGI" target="_blank">Cover Page Format [IT] for Preparing Lab Copy</a></li>
 	<li><a href="https://iemcollege-my.sharepoint.com/:w:/g/personal/susovan_jana_iem_edu_in/EbbkC17zXe1DiO2MUmdH_XQB34NICk_5eSa3bQO5PP5JYw?e=HhUSYD" target="_blank">Cover Page Format [CSE (IoT)] for Preparing Lab Copy</a></li>
 	<li><a href="https://iemcollege-my.sharepoint.com/:w:/g/personal/susovan_jana_iem_edu_in/ERnsdyue-ntPpMA5bYRKROIB19HsQroNkuWfrlGro7n_Ow?e=WdhZIq" target="_blank">Cover Page Format [CSE (IoTCSBT)] for Preparing Lab Copy</a></li>
